force-app/main/default/objects/OI_TD_Finding__c/OI_TD_Finding__c.object-meta.xml
<CustomObject>
    <label>OI TD Finding</label>
    <pluralLabel>OI TD Findings</pluralLabel>
    <nameField>
        <label>OI TD Finding Number</label>
        <type>AutoNumber</type>
        <displayFormat>TDF-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description
  >One technical-debt finding produced by an OI_TD_Scan__c analysis run.</description>
</CustomObject>