force-app/main/default/objects/OI_TD_Finding__c/fields/AI_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_Explanation__c</fullName>
    <label>AI Explanation</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>