force-app/main/default/objects/OI_TD_Finding__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Text</type>
    <length>40</length>
</CustomField>