force-app/main/default/objects/OI_TD_Finding__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>