force-app/main/default/objects/OI_TD_Finding__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <label>Scan</label>
    <type>MasterDetail</type>
    <referenceTo>OI_TD_Scan__c</referenceTo>
    <relationshipName>Findings</relationshipName>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>