force-app/main/default/objects/OI_TD_Finding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Text</type>
    <length>20</length>
</CustomField>